--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
