agregar autenticacion con jwt en el backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,10 @@
 PORT=5000
+
 # DB_HOST=localhost
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=proyecto_comite
+
+TOKEN_SECRET=
