--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   }
