--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8"
   },
