--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
   }
 }
