--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "generator-express-crud": "^0.5.3",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
