--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.0"
   }
 }
