--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,10 @@
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1",
-    "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "sequelize-auto": "^0.8.8"
   }
 }
