--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "comite",
+    "database": "proyecto_comite",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
