[Refactor] Refactorización de el gitignore

--- a/backend/.env
+++ b/backend/.env
@@ -5,8 +5,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_DATABASE=proyecto_comite
-# DB_DATABASE=comite
+# DB_DATABASE=proyecto_comite
+DB_DATABASE=comite
 
 TOKEN_SECRET=
 
