--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "proyecto_comite",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "root",
