--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -4,8 +4,7 @@
     "password": null,
     "database": "proyecto_comite",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "logging": false
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
