--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "http-server": "^14.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
