--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "axios": "^1.5.0",
+    "formik": "^2.4.5",
     "headlessui": "^0.0.0",
     "http-server": "^14.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -22,7 +23,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
