--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
+    "socket.io-client": "^4.7.2",
     "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
