--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
     "socket.io-client": "^4.7.2",
-    "xlsx": "^0.18.5",
+    "xlsx": "file:vendor/xlsx-0.20.0.tgz",
     "yup": "^1.3.2"
   },
   "devDependencies": {
