--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.0.1",
     "generator-express-crud": "^0.5.3",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
