--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicacion para la gestion de comites en express js y react",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon --exitcrash index.js",
     "dev": "nodemon index.js",
     "build": "npm install"
   },
