--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "officegen": "^0.6.5",
     "pizzip": "^3.1.4",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
