--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,8 @@
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "venom-bot": "^5.0.21"
   },
   "devDependencies": {
     "sequelize-auto": "^0.8.8"
